--- a/_includes/master/head.html
+++ b/_includes/master/head.html
@@ -1,4 +1,5 @@
 <head>
+    <meta charset="UTF-8">
     <title>{{page.title}} | {{site.title}}</title>
 
     <link rel="stylesheet" href="/assets/css/master.css">
