--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -13,7 +13,7 @@
         <button onclick="toTab('2022', this, 'var(--blue-light)'); document.getElementById('extra-placeholder').style.display = 'none';" class="tab">2022</button>
     </section>
     <section id="extra-placeholder">
-        <p>Select a year to see content</p>
+        <p>Select a year to see content...</p>
     </section>
     <section class="extra-content" id="2021">
         <h1>2021</h1>
