--- a/_includes/master/head.html
+++ b/_includes/master/head.html
@@ -5,5 +5,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, viewport-fit=cover">
 
+    <script src="/assets/js/scroll-header.js"></script>
     <script src="https://kit.fontawesome.com/fc093d7fbf.js" crossorigin="anonymous"></script>
 </head>
