--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -74,6 +74,15 @@ header {
 header h1 {
     font-size: 24px;
 }
+hb {
+    position: fixed;
+    top: 0px;
+    left: 50%;
+    transform: translate(-50%);
+    height: 60px;
+    width: 100%;
+    z-index: 8;
+}
 .menu {
     position: absolute;
     top: 20px;
@@ -168,28 +177,14 @@ banner::before {
     display: grid;
     grid-template-columns: 40% auto;
 }
-.grid-5050 {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-gap: 25px;
-    margin-bottom: 25px;
-}
-#grid-S3 {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    text-align: center;
-}
-#grid-S4 {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    text-align: center;
-    grid-gap: 60px;
-}
 .vertical-center {
     align-items: center;
 }
 
-
+td {
+    text-align: center;
+    padding: 10px 0px;
+}
 
 @keyframes banner {
     from {object-position: 0px 0px;}
